ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rottenlama-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: rottenlama.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rottenlama-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: rottenlama-backend-service
            port:
              number: 80
